<resources>
    <string name="app_name">SunnyWeather</string>
    <string name="input_address">input address</string>
    <string name="forecast">forecast</string>
    <string name="life_index">life index</string>
    <string name="cold_risk">cold risk</string>
    <string name="dressing">dressing</string>
    <string name="ultraviolet">ultraviolet</string>
    <string name="car_washing">car washing</string>
    <string name="no_location_found">No location could be found.</string>
</resources>